[build-system]
requires = [ "setuptools>=42", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
name = "mattsollamatools"
version = "0.0.25"
description = "Tools for working with Ollama"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
requires-python = ">=3.6"

  [[project.authors]]
  name = "Matt Williams"
  email = "m@technovangelist.com"

  [project.urls]
  Homepage = "https://technovangelist.com"

  [project.readme]
  file = "README.md"
  content-type = "text/markdown"

[tool.setuptools]
include-package-data = false

  [tool.setuptools.package-dir]
  "" = "src"

[tool.setuptools.packages.find]
where = [ "src" ]
namespaces = false
